added radar plot

--- a/src/plot_figures.ipynb
+++ b/src/plot_figures.ipynb
@@ -44,6 +44,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conventional methods"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -413,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -424,11 +431,12 @@
        },
        "data": [
         {
-         "boxmean": true,
+         "boxmean": false,
          "boxpoints": "all",
          "fillcolor": "rgba(0,0,0,0)",
          "jitter": 0.4,
          "line": {
+          "color": "#F2CD5D",
           "width": 1
          },
          "marker": {
@@ -444,11 +452,12 @@
          }
         },
         {
-         "boxmean": true,
+         "boxmean": false,
          "boxpoints": "all",
          "fillcolor": "rgba(0,0,0,0)",
          "jitter": 0.4,
          "line": {
+          "color": "#4C9F70",
           "width": 1
          },
          "marker": {
@@ -464,11 +473,12 @@
          }
         },
         {
-         "boxmean": true,
+         "boxmean": false,
          "boxpoints": "all",
          "fillcolor": "rgba(0,0,0,0)",
          "jitter": 0.4,
          "line": {
+          "color": "#F45B69",
           "width": 1
          },
          "marker": {
@@ -1291,9 +1301,10 @@
     "# Plot barplot\n",
     "\n",
     "groups = df[0].unique()\n",
+    "colors=['#F2CD5D', '#4C9F70', '#F45B69']\n",
     "traces = []\n",
     "\n",
-    "for group in groups:\n",
+    "for group, col in zip(groups, colors):\n",
     "    group_data = df[df[0] == group]['ct_ann_clusters$delta.next']\n",
     "    traces.append(\n",
     "        go.Box(\n",
@@ -1303,9 +1314,9 @@
     "            jitter=0.4,             # Spread out points for visibility\n",
     "            pointpos=-1.8,          # Offset points from box\n",
     "            marker=dict(size=4, opacity=0.6),\n",
-    "            line=dict(width=1),\n",
+    "            line=dict(width=1, color=col),\n",
     "            fillcolor='rgba(0,0,0,0)',  # Transparent fill if desired\n",
-    "            boxmean=True            # Optionally show mean\n",
+    "            boxmean=False           # Optionally show mean\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -1327,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4020,8 +4031,105 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "plotlyServerURL": "https://plot.ly"
+       },
+       "data": [
+        {
+         "fill": "toself",
+         "name": "GPT o3mini",
+         "r": {
+          "bdata": "AAAAAAAAOkAAAAAAAABKQAAAAAAAADZA",
+          "dtype": "f8"
+         },
+         "theta": [
+          "Correct",
+          "Partially Correct",
+          "Incorrect"
+         ],
+         "type": "scatterpolar"
+        },
+        {
+         "fill": "toself",
+         "name": "GPT-4",
+         "r": {
+          "bdata": "AAAAAAAAMEAAAAAAAABOQAAAAAAAADhA",
+          "dtype": "f8"
+         },
+         "theta": [
+          "Correct",
+          "Partially Correct",
+          "Incorrect"
+         ],
+         "type": "scatterpolar"
+        },
+        {
+         "fill": "toself",
+         "name": "GPT-4.1",
+         "r": {
+          "bdata": "AAAAAAAAPkAAAAAAAABHQAAAAAAAADhA",
+          "dtype": "f8"
+         },
+         "theta": [
+          "Correct",
+          "Partially Correct",
+          "Incorrect"
+         ],
+         "type": "scatterpolar"
+        },
+        {
+         "fill": "toself",
+         "name": "GPT-4.5 Preview",
+         "r": {
+          "bdata": "AAAAAAAAQkAAAAAAAABKQAAAAAAAAChA",
+          "dtype": "f8"
+         },
+         "theta": [
+          "Correct",
+          "Partially Correct",
+          "Incorrect"
+         ],
+         "type": "scatterpolar"
+        }
+       ],
+       "layout": {
+        "polar": {
+         "radialaxis": {
+          "visible": true
+         }
+        },
+        "showlegend": true,
+        "template": {
+         "data": {
+          "scatter": [
+           {
+            "type": "scatter"
+           }
+          ]
+         }
+        }
+       }
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "# Barchart plot of different versions model of GPT models\n",
+    "\n",
+    "#categories = ['GPT-o3mini','GPT-4', 'GPT-4.1','GPT-4.5 Preview']\n",
+    "categories = ['Correct', 'Partially Correct', 'Incorrect']\n",
+    "\n",
+    "# Results\n",
+    "gpt_o3mini = np.array([13, 26, 11]) / 50 * 100\n",
+    "gpt_4 = np.array([8, 30, 12]) / 50 * 100\n",
+    "gpt_4_1 = np.array([15, 23, 12]) / 50 * 100\n",
+    "gpt_4_5 = np.array([18, 26, 6]) / 50 * 100\n",
     "\n"
    ]
   },
@@ -6991,7 +7099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -7003,46 +7111,55 @@
        "data": [
         {
          "fill": "toself",
-         "name": "Correct",
-         "r": [
-          1,
-          5,
-          2
-         ],
+         "line": {
+          "color": "#B9314F"
+         },
+         "name": "Skull Bone Marrow",
+         "r": {
+          "bdata": "AAAAAACAU0AAAAAAAABTQAAAAAAAAFNAAAAAAAAAVkA=",
+          "dtype": "f8"
+         },
          "theta": [
           "GPT-o3mini",
           "GPT-4",
-          "GPT-4.5"
+          "GPT-4.1",
+          "GPT-4.5 Preview"
          ],
          "type": "scatterpolar"
         },
         {
          "fill": "toself",
-         "name": "Partially Correct",
-         "r": [
-          4,
-          3,
-          2.5
-         ],
+         "line": {
+          "color": "#3A4F41"
+         },
+         "name": "Choroid Plexus",
+         "r": {
+          "bdata": "AAAAAACAUkAAAAAAAABEQAAAAAAAAFFAAAAAAACAUUA=",
+          "dtype": "f8"
+         },
          "theta": [
           "GPT-o3mini",
           "GPT-4",
-          "GPT-4.5"
+          "GPT-4.1",
+          "GPT-4.5 Preview"
          ],
          "type": "scatterpolar"
         }
        ],
        "layout": {
+        "legend": {
+         "orientation": "v",
+         "x": 0.8,
+         "xanchor": "right",
+         "y": 1.02,
+         "yanchor": "bottom"
+        },
         "polar": {
          "radialaxis": {
-          "range": [
-           0,
-           5
-          ],
           "visible": true
          }
         },
-        "showlegend": false,
+        "showlegend": true,
         "template": {
          "data": {
           "scatter": [
@@ -7051,6 +7168,16 @@
            }
           ]
          }
+        },
+        "title": {
+         "font": {
+          "size": 16
+         },
+         "text": "Percentage of correct + partially correct for different GPT models",
+         "x": 0.5,
+         "xanchor": "center",
+         "y": 0.95,
+         "yanchor": "middle"
         }
        }
       }
@@ -7063,43 +7190,59 @@
     "# Figure X - GPTCelltype variations for both tissues/conditions\n",
     "# Will do the following : GPT model, GPT prompt engineering, \n",
     "\n",
-    "categories = ['GPT-o3mini','GPT-4','GPT-4.5']\n",
+    "categories = ['GPT-o3mini','GPT-4', 'GPT-4.1','GPT-4.5 Preview']\n",
+    "\n",
+    "# Results SBM\n",
+    "sbm_correct = np.array([13, 8, 15, 18]) / 50 * 100\n",
+    "sbm_partially_correct = np.array([26, 30, 23, 26]) / 50 * 100\n",
+    "\n",
+    "# Results CP\n",
+    "cp_correct = np.array([28, 13, 22, 26]) / 50 * 100\n",
+    "cp_partially_correct = np.array([9, 7, 12, 9]) / 50 * 100\n",
     "\n",
     "fig = go.Figure()\n",
     "\n",
     "fig.add_trace(go.Scatterpolar(\n",
-    "      r=[1, 5, 2],\n",
+    "      r=sbm_correct + sbm_partially_correct,\n",
     "      theta=categories,\n",
     "      fill='toself',\n",
-    "      name='Correct'\n",
+    "      line=dict(color='#B9314F'),\n",
+    "      name='Skull Bone Marrow'\n",
     "))\n",
     "fig.add_trace(go.Scatterpolar(\n",
-    "      r=[4, 3, 2.5],\n",
+    "      r=cp_correct + cp_partially_correct,\n",
     "      theta=categories,\n",
     "      fill='toself',\n",
-    "      name='Partially Correct'\n",
+    "      line=dict(color='#3A4F41'),\n",
+    "      name='Choroid Plexus'\n",
     "))\n",
     "\n",
     "fig.update_layout(\n",
     "  polar=dict(\n",
     "    radialaxis=dict(\n",
-    "      visible=True,\n",
-    "      range=[0, 5]\n",
+    "      visible=True\n",
     "    )),\n",
     "  template='none',\n",
-    "  showlegend=False\n",
+    "  showlegend=True,\n",
+    "  title=dict(\n",
+    "        text='Percentage of correct + partially correct for different GPT models',\n",
+    "        font=dict(size=16),\n",
+    "        xanchor='center',\n",
+    "        yanchor='middle',\n",
+    "        x=0.5,\n",
+    "        y=0.95\n",
+    "    ),\n",
+    "    legend=dict(\n",
+    "        orientation=\"v\",\n",
+    "        yanchor=\"bottom\",\n",
+    "        y=1.02,\n",
+    "        xanchor=\"right\",\n",
+    "        x=0.8\n",
+    "    ),\n",
     ")\n",
     "\n",
-    "fig.show()\n",
-    "\n"
+    "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
